--- a/vignettes/basics.Rmd
+++ b/vignettes/basics.Rmd
@@ -210,6 +210,36 @@ points_no_water <- st_difference(pts_output, water_only)
 
 # Batch processing
 
+## Load in the study area file 
 ```{r}
+jobs <-
+  readr::read_csv(
+    file = file.path('./../data/nyc_study_area_counties.csv'),
+    col_types = list(
+      readr::col_character(),
+      readr::col_character(),
+      readr::col_character(),
+      readr::col_character(),
+      readr::col_number(),
+      readr::col_character()
+    )
+  )
+
+jobs
+```
+
+
+
+```{r}
+
+save_file(to_save = fishnet_latlong, geo_type = 'fishnet', format = 'GPKG',
+          county_name = 'Norfolk', county_abbrev = 'Norfolk')
+
+```
+
+
+```{r}
+
+walk(jobs, save_all_outputs)
 
 ```
